# kiss3d_reproduction

./: .gitignore  .gitinclude  ANALISE_COMPARATIVA.md  AUDIT_REPORT.md  CHECKLIST_VISUAL_STUDIO.md  CORRECOES_IMPLEMENTADAS.md  FIXES_APPLIED.md  GUIA_EXECUCAO_PIPELINE.md  INSTALAR_NVDIFFRAST.md  INSTALL.md  INSTALL_DEPENDENCIES.md  INSTRUCTIONS.md  MIGRACAO_PYTHON_3.11.md  PLAN.md  PLANNING.md  PROXIMOS_PASSOS.md  QUALITY_IMPROVEMENTS.md  QUICK_START_PYTHON311.md  README.md  README_MIGRACAO.md  RESUMO_INSTALACAO.md  START_HERE.md  STATUS_EXECUCAO.md  WRONGPATH.md  env.example  execution_analysis_report.txt  kiss3dgen_colab.ipynb  pipeline.mermaid  pyproject.toml  requirements.txt  setup_python311.bat  setup_python311.ps1  tmp_check.py  tmp_color_stats.py  verify_setup.py
comfyui-test/: CHANGELOG.md  QUICKSTART.md  README.md  README_TESTE.md  START_HERE.md  TEST_RESULTS.md  TEST_RUN_GUIDE.md  integrate_llm.py  requirements.txt  setup_checklist.md  test_comfyui_connection.py  test_workflow_simple.py  workflow_mesh3d.json  workflow_simple.json
mesh3d-generator-py3.11/: pyvenv.cfg
mesh3d_generator/: __init__.py
pipeline_config/: default.yaml  flux_top10_dataset.yaml
relatory/: main.tex
scripts/: PIPELINE_KISS3DGEN.md  QUICKSTART_DOWNLOAD.md  README.md  README_DOWNLOAD.md  README_PIPELINE.md  RESUMO_FALTANTE.md  STATUS.md  activate_kiss3d_env.bat  benchmark_pipeline.py  check_and_download_models.py  check_hf_auth.py  check_pipeline_readiness.py  check_pytorch3d.py  collect_model_names.py  compile_pytorch3d.ps1  debug_mesh.py  diagnose_cuda.bat  download_all_models.py  (+60 more)
(+37 files in other folders)
